tests/snapshots/run_wpt_conformance__litert_reduceL2_float32_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l2.https.any.js reduceL2 float32 5D tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceL2 { input: 0, options: Some(MLReduceOptions { label: "", axes: None, keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceL2Input: f32[2, 1, 4, 1, 3];
  }

  nodes {
    [reduceL2Output] = reduceL2(reduceL2Input, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceL2Output; }
}
