tests/snapshots/run_wpt_conformance__litert_reduceLogSumExp_avoids_underflows_caused_by_taking_the_log_of_small_inputs.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum_exp.https.any.js reduceLogSumExp avoids underflows caused by taking the log of small inputs, litert
 Failed to build graph: failed to compile model: Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceLogSumExpInput: f32[1];
  }

  nodes {
    [reduceLogSumExpOutput] = reduceLogSumExp(reduceLogSumExpInput, axes=[0], keepDimensions=false, label="");
  }

  outputs { reduceLogSumExpOutput; }
}
