tests/snapshots/run_wpt_conformance__litert_reduceLogSumExp_float16_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum_exp.https.any.js reduceLogSumExp float16 0D constant tensor empty axes, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceLogSumExp { input: 0, options: Some(MLReduceOptions { label: "", axes: Some([]), keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[] @bytes([97, 58]);
  }

  nodes {
    [reduceLogSumExpOutput] = reduceLogSumExp(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceLogSumExpOutput; }
}
